--- a/index.html
+++ b/index.html
@@ -2,165 +2,230 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Bencana Sumatra 2025 — Laporan & Aksi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sumatra Crisis Center | Informasi & Bantuan Resmi</title>
+  <meta name="description" content="Pusat informasi bencana Sumatra terkini, data korban, peta wilayah terdampak, dan cara resmi membantu korban." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
   <style>
-    :root{--bg:#0f1724;--card:#0b1220;--accent:#e11d48;--muted:#94a3b8;--glass:rgba(255,255,255,0.04)}
-    *{box-sizing:border-box;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial}
-    body{margin:0;background:linear-gradient(180deg,#071023 0%,#071533 100%);color:#e6eef8}
-    .wrap{max-width:1100px;margin:32px auto;padding:20px}
-    header{display:flex;gap:16px;align-items:center}
-    .logo{width:64px;height:64px;border-radius:12px;background:var(--accent);display:flex;align-items:center;justify-content:center;font-weight:700}
-    h1{margin:0;font-size:clamp(20px,3vw,34px)}
-    p.lead{color:var(--muted);margin-top:6px}
-    .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:20px}
-    .card{background:var(--card);padding:18px;border-radius:14px;box-shadow:0 6px 30px rgba(2,6,23,0.6);}
-    .stats{display:flex;gap:12px;flex-wrap:wrap}
-    .stat{flex:1 1 45%;background:var(--glass);padding:12px;border-radius:10px}
-    .stat h3{margin:0;font-size:20px}
-    .stat p{margin:6px 0 0;color:var(--muted)}
-    .sources{font-size:13px;color:var(--muted);margin-top:8px}
-    .actions{display:flex;gap:8px;margin-top:12px}
-    .btn{background:transparent;border:1px solid rgba(255,255,255,0.08);padding:8px 12px;border-radius:8px;color:#e6eef8;cursor:pointer}
-    footer{margin-top:28px;color:var(--muted);font-size:13px}
-    @media(max-width:900px){.grid{grid-template-columns:1fr;}.logo{width:56px;height:56px}}
-    /* alert */
-    .alert{background:#3b0b0b;padding:10px;border-radius:8px;color:#ffdede;margin-top:14px}
-    .map-wrap{height:260px;background:linear-gradient(180deg,#081222,#052033);display:flex;align-items:center;justify-content:center;border-radius:10px;color:var(--muted)}
-    .article-list{display:grid;gap:10px;margin-top:10px}
-    .article{padding:10px;border-radius:8px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent)}
+    :root{
+      --bg-1:#020617;
+      --bg-2:#020b1f;
+      --card:#020617cc;
+      --border:rgba(255,255,255,.08);
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --accent:#ef4444;
+      --accent-2:#f97316;
+      --ok:#22c55e;
+    }
+
+    *{box-sizing:border-box;margin:0;padding:0;font-family:'Inter',system-ui}
+    html{scroll-behavior:smooth}
+    body{
+      background:radial-gradient(1200px 600px at 70% -10%,#1f2933 0%,transparent 60%),linear-gradient(180deg,var(--bg-1),var(--bg-2));
+      color:var(--text)
+    }
+
+    a{color:inherit;text-decoration:none}
+    img{max-width:100%;display:block}
+
+    /* ================= LAYOUT ================= */
+    .container{max-width:1200px;margin:auto;padding:28px}
+    .grid{display:grid;gap:24px}
+    .grid-2{grid-template-columns:2fr 1fr}
+    @media(max-width:900px){.grid-2{grid-template-columns:1fr}}
+
+    /* ================= HEADER ================= */
+    header{
+      position:sticky;top:0;z-index:50;
+      background:linear-gradient(180deg,rgba(2,6,23,.9),rgba(2,6,23,.7));
+      backdrop-filter:blur(8px);
+      border-bottom:1px solid var(--border)
+    }
+    .nav{display:flex;justify-content:space-between;align-items:center}
+    .brand{display:flex;gap:12px;align-items:center;font-weight:800;letter-spacing:.3px}
+    .logo{width:42px;height:42px;border-radius:12px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:flex;align-items:center;justify-content:center;font-weight:900}
+    .menu{display:flex;gap:20px;font-size:14px;color:var(--muted)}
+    .menu a:hover{color:#fff}
+
+    /* ================= HERO ================= */
+    .hero{padding:64px 0 48px}
+    .hero-wrap{display:grid;grid-template-columns:1.1fr .9fr;gap:36px;align-items:center}
+    @media(max-width:900px){.hero-wrap{grid-template-columns:1fr}}
+    .badge{display:inline-block;padding:6px 12px;border:1px solid var(--border);border-radius:999px;font-size:12px;color:var(--muted);margin-bottom:16px}
+    .hero h1{font-size:clamp(28px,4vw,54px);line-height:1.05;letter-spacing:-1px}
+    .hero p{color:var(--muted);margin-top:14px;max-width:560px}
+    .hero-actions{display:flex;gap:12px;margin-top:22px;flex-wrap:wrap}
+
+    /* ================= BUTTON ================= */
+    .btn{padding:12px 16px;border-radius:12px;font-size:14px;font-weight:600;border:1px solid var(--border);background:#020617;color:#fff;cursor:pointer}
+    .btn-primary{background:linear-gradient(135deg,var(--accent),var(--accent-2));border:none}
+    .btn-outline:hover{border-color:#fff}
+
+    /* ================= CARD ================= */
+    .card{
+      background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.01));
+      border:1px solid var(--border);
+      border-radius:20px;
+      padding:20px
+    }
+    .card-title{font-weight:700;margin-bottom:14px}
+
+    /* ================= STATS ================= */
+    .stats{display:grid;grid-template-columns:repeat(4,1fr);gap:14px}
+    @media(max-width:700px){.stats{grid-template-columns:repeat(2,1fr)}}
+    .stat{padding:14px;border-radius:16px;background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.01));border:1px solid var(--border)}
+    .stat h3{font-size:24px}
+    .stat p{margin-top:6px;color:var(--muted);font-size:13px}
+
+    /* ================= LIST ================= */
+    .list{display:grid;gap:12px}
+    .list-item{padding:12px 14px;border-radius:14px;border:1px solid var(--border);background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.01))}
     .small{font-size:13px;color:var(--muted)}
+
+    /* ================= MAP ================= */
+    .map{height:280px;border-radius:16px;border:1px solid var(--border);background:radial-gradient(400px 200px at 50% 0%,rgba(239,68,68,.18),transparent),linear-gradient(180deg,#020617,#020b1f);display:flex;align-items:center;justify-content:center;color:var(--muted);font-size:14px}
+
+    /* ================= FOOTER ================= */
+    footer{border-top:1px solid var(--border);margin-top:64px}
+    .foot{display:grid;grid-template-columns:1.2fr .8fr;gap:24px}
+    @media(max-width:900px){.foot{grid-template-columns:1fr}}
+
+    .divider{height:1px;background:var(--border);margin:16px 0}
+
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="logo">BS</div>
-      <div>
-        <h1>Bencana di Sumatra — Laporan &amp; Aksi</h1>
-        <p class="lead">Ringkasan kejadian, data korban terkini, pusat bantuan, dan panduan aman bagi warga terdampak.</p>
+
+<!-- ================= HEADER ================= -->
+<header>
+  <div class="container nav">
+    <div class="brand">
+      <div class="logo">SC</div>
+      <div>Sumatra Crisis Center</div>
+    </div>
+    <div class="menu">
+      <a href="#data">Data</a>
+      <a href="#peta">Wilayah</a>
+      <a href="#bantuan">Bantuan</a>
+      <a href="#kontak">Kontak</a>
+    </div>
+  </div>
+</header>
+
+<!-- ================= HERO ================= -->
+<section class="hero container">
+  <div class="hero-wrap">
+    <div>
+      <span class="badge">Status Darurat Nasional</span>
+      <h1>Pusat Informasi & Bantuan Bencana <br> Pulau Sumatra</h1>
+      <p>Portal resmi untuk memantau data korban, wilayah terdampak, serta akses bantuan dan donasi terpercaya bagi masyarakat.</p>
+      <div class="hero-actions">
+        <a href="#bantuan" class="btn btn-primary">Donasi & Bantuan</a>
+        <a href="#data" class="btn btn-outline">Lihat Data</a>
       </div>
-    </header>
-
-    <div class="grid">
-      <main>
-        <div class="card">
-          <h2>Pembaruan Utama</h2>
-          <div class="alert" id="main-alert">Hujan ekstrem + longsor dan banjir bandang melanda Aceh, Sumatera Utara, dan Sumatera Barat sejak akhir November 2025. Data di bawah diperbarui otomatis (jika tersedia).</div>
-
-          <section style="margin-top:12px">
-            <h3>Statistik Cepat</h3>
-            <div class="stats">
-              <div class="stat">
-                <h3 id="stat-dead">—</h3>
-                <p>Korban meninggal</p>
-              </div>
-              <div class="stat">
-                <h3 id="stat-missing">—</h3>
-                <p>Masih dinyatakan hilang</p>
-              </div>
-              <div class="stat">
-                <h3 id="stat-affected">—</h3>
-                <p>Jiwan terdampak</p>
-              </div>
-              <div class="stat">
-                <h3 id="stat-evac">—</h3>
-                <p>Pengungsi</p>
-              </div>
-            </div>
-            <div class="sources">Sumber utama: BNPB, liputan media nasional, dan laporan internasional.</div>
-          </section>
-
-          <section style="margin-top:14px">
-            <h3>Peta & Area Terdampak</h3>
-            <div class="map-wrap">[Peta interaktif bisa ditempatkan di sini — gunakan Leaflet/Mapbox dan data BNPB/BMKG]</div>
-          </section>
-
-          <section style="margin-top:14px">
-            <h3>Berita Singkat</h3>
-            <div class="article-list" id="news-list">
-              <div class="article"><strong>UPDATE:</strong> Data korban mengalami peningkatan; operasi SAR dan distribusi logistik berjalan intensif.</div>
-              <div class="article small">Analisis menunjukkan faktor hujan ekstrem ditambah kerusakan hutan dan aktivitas tambang memperbesar skala bencana.</div>
-            </div>
-          </section>
-        </div>
-
-        <div class="card" style="margin-top:12px">
-          <h3>Cara Membantu (Praktis)</h3>
-          <ul>
-            <li>Donasi ke pos resmi pemerintah (BNPB/relawan terdaftar) atau organisasi terpercaya.</li>
-            <li>Kirim barang mengikuti syarat logistik (makanan siap saji, air mineral, selimut, obat dasar).</li>
-            <li>Jangan menyebarkan foto korban tanpa izin; cek fakta sebelum membagikan informasi.</li>
-          </ul>
-          <div class="small">Tip: koordinasikan pengiriman barang dengan gudang bantuan setempat agar tidak menambah beban logistik.</div>
-        </div>
-
-      </main>
-
-      <aside>
-        <div class="card">
-          <h3>Info Singkat</h3>
-          <p class="small">Provinsi terdampak utama: Aceh, Sumatera Utara, Sumatera Barat. Penyebab: hujan ekstrem, longsor, banjir bandang; gempa kecil tercatat di beberapa titik (BMKG realtime).</p>
-
-          <div style="margin-top:10px">
-            <h4>Link Penting</h4>
-            <ul class="small">
-              <li><a href="#" style="color:inherit">BNPB — Pusat Data</a></li>
-              <li><a href="#" style="color:inherit">BMKG — Gempa & Cuaca</a></li>
-              <li><a href="#" style="color:inherit">Daftar Posko Relawan</a></li>
-            </ul>
-          </div>
-
-          <div style="margin-top:10px">
-            <h4>Kontak Darurat</h4>
-            <div class="small">BNPB: 117 / Hotline Lokal: lihat pengumuman provinsi</div>
-          </div>
-        </div>
-
-        <div class="card" style="margin-top:12px">
-          <h3>Perkembangan Terbaru</h3>
-          <div class="small">(Skrip ini dapat dihubungkan ke API berita untuk menarik headline terbaru secara otomatis.)</div>
-          <div style="margin-top:10px">
-            <button class="btn" id="refresh">Segarkan Data</button>
-          </div>
-        </div>
-      </aside>
     </div>
 
-    <footer>
-      Halaman ini dibuat untuk tujuan informasi dan koordinasi bantuan. Perbarui data dari sumber resmi sebelum mengambil keputusan kritis.
-    </footer>
+    <div class="card">
+      <div class="card-title">Ringkasan Situasi</div>
+      <p class="small">Banjir besar dan longsor melanda beberapa provinsi di Sumatra akibat curah hujan ekstrem. Operasi pencarian dan evakuasi sedang berlangsung secara intensif.</p>
+      <div class="divider"></div>
+      <div class="small">Sumber utama: BNPB • BMKG • Pemerintah Daerah</div>
+    </div>
   </div>
+</section>
 
-  <script>
-    // Data awal (isi dengan angka yang valid saat deploy).
-    const initial = {
-      dead: 916,
-      missing: 274,
-      affected: 2100000,
-      evac: 589400
-    };
+<!-- ================= DATA ================= -->
+<section id="data" class="container grid">
+  <div class="card">
+    <div class="card-title">Statistik Terkini</div>
+    <div class="stats">
+      <div class="stat"><h3 id="dead">—</h3><p>Korban Meninggal</p></div>
+      <div class="stat"><h3 id="missing">—</h3><p>Hilang</p></div>
+      <div class="stat"><h3 id="affected">—</h3><p>Terdampak</p></div>
+      <div class="stat"><h3 id="evac">—</h3><p>Pengungsi</p></div>
+    </div>
+    <div class="divider"></div>
+    <div class="small">Data diperbarui dari laporan resmi. Angka dapat berubah sewaktu-waktu.</div>
+  </div>
+</section>
 
-    function fmt(n){return n===null||n===undefined?'-':n.toLocaleString('id')}
-    document.getElementById('stat-dead').textContent = fmt(initial.dead)
-    document.getElementById('stat-missing').textContent = fmt(initial.missing)
-    document.getElementById('stat-affected').textContent = fmt(initial.affected)
-    document.getElementById('stat-evac').textContent = fmt(initial.evac)
+<!-- ================= MAIN ================= -->
+<section class="container grid grid-2">
 
-    // Tombol refresh: contoh logika untuk fetch API (ganti URL dengan endpoint data resmi)
-    document.getElementById('refresh').addEventListener('click', async ()=>{
-      try{
-        // contoh: const res = await fetch('https://api.example.com/bencana/sumatra/latest')
-        // const data = await res.json()
-        // simulasi update singkat
-        const data = {dead:916, missing:274, affected:2100000, evac:589400}
-        document.getElementById('stat-dead').textContent = fmt(data.dead)
-        document.getElementById('stat-missing').textContent = fmt(data.missing)
-        document.getElementById('stat-affected').textContent = fmt(data.affected)
-        document.getElementById('stat-evac').textContent = fmt(data.evac)
-        alert('Data diperbarui (simulasi). Ganti URL fetch di skrip untuk koneksi nyata.')
-      }catch(e){alert('Gagal mengambil data: '+e)}
-    })
-  </script>
+  <!-- KIRI -->
+  <main class="grid">
+    <div id="peta" class="card">
+      <div class="card-title">Peta Wilayah Terdampak</div>
+      <div class="map">Peta Interaktif (siap dihubungkan ke Leaflet/Mapbox)</div>
+    </div>
+
+    <div class="card">
+      <div class="card-title">Berita & Pembaruan</div>
+      <div class="list">
+        <div class="list-item">Update evakuasi korban terus berlangsung di beberapa kabupaten.</div>
+        <div class="list-item">Distribusi logistik difokuskan ke daerah dengan akses terputus.</div>
+        <div class="list-item">Relawan medis diterjunkan untuk mencegah wabah pascabencana.</div>
+      </div>
+    </div>
+  </main>
+
+  <!-- KANAN -->
+  <aside class="grid">
+    <div id="bantuan" class="card">
+      <div class="card-title">Cara Membantu</div>
+      <div class="list">
+        <div class="list-item">Donasi melalui rekening resmi BNPB / PMI</div>
+        <div class="list-item">Kirim logistik: makanan siap saji, selimut, obat</div>
+        <div class="list-item">Sebarkan informasi dari sumber tepercaya</div>
+      </div>
+      <button class="btn btn-primary" style="margin-top:14px;width:100%">Donasi Sekarang</button>
+    </div>
+
+    <div class="card">
+      <div class="card-title">Kontak Darurat</div>
+      <div class="small">BNPB Nasional: <strong>117</strong></div>
+      <div class="small">Call Center Sumatra Barat: <strong>129</strong></div>
+    </div>
+  </aside>
+
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+  <div id="kontak" class="container foot">
+    <div>
+      <div class="brand"><div class="logo">SC</div>Sumatra Crisis Center</div>
+      <p class="small" style="margin-top:10px">Website ini dibuat untuk kepentingan informasi publik, edukasi kebencanaan, dan koordinasi bantuan kemanusiaan.</p>
+    </div>
+    <div class="small">
+      <div>Email: info@sumatracrisis.id</div>
+      <div>Telepon: 117 (BNPB)</div>
+      <div class="divider"></div>
+      <div>© 2025 Sumatra Crisis Center</div>
+    </div>
+  </div>
+</footer>
+
+<!-- ================= SCRIPT ================= -->
+<script>
+  const data = {
+    dead: 916,
+    missing: 274,
+    affected: 2100000,
+    evac: 589400
+  };
+
+  const fmt = n => n.toLocaleString('id-ID');
+
+  document.getElementById('dead').textContent = fmt(data.dead);
+  document.getElementById('missing').textContent = fmt(data.missing);
+  document.getElementById('affected').textContent = fmt(data.affected);
+  document.getElementById('evac').textContent = fmt(data.evac);
+</script>
+
 </body>
 </html>
